--- a/clock/index-START.html
+++ b/clock/index-START.html
@@ -12,6 +12,7 @@
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
         <div class="hand second-hand"></div>
+        <div class="clock-center"></div>
       </div>
     </div>
 
@@ -42,11 +43,6 @@
       margin:50px auto;
       position: relative;
       padding:2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
     }
 
     .clock-face {
@@ -55,6 +51,16 @@
       height: 100%;
       transform: translateY(-3px); /* account for the height of the clock hands */
     }
+    .clock-center {
+      width: 20px;
+      height: 20px;
+      background: lightgoldenrodyellow;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-10px, -10px); 
+      }
 
     .hand {
       width:50%;
@@ -65,6 +71,14 @@
       transform-origin: 100%;
       transform:rotate(90deg);
       transition: all 0.1s;
+    }
+    .hour-hand{
+      width: 40%;
+      transform: translateX(25%);
+    }
+    .second-hand{
+      background: red;
+      height: 3px;
     }
   
 
@@ -84,7 +98,8 @@
       const hoursDegrees = ((hours/12)*360) + 90;
       minHand.style.transform = `rotate(${minsDegrees}deg)`;
       secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+      hourHand.style.transform = `translateX(25%) rotate(${hoursDegrees}deg)`;
+      console.log(secondsDegrees)
 
     } 
     setInterval(setDate, 1000);
